--- a/src/app/screens/bookings/bookings.component.html
+++ b/src/app/screens/bookings/bookings.component.html
@@ -252,9 +252,15 @@
                 <strong>Drop-Off Location</strong>
                 <span>{{ currentBookingDetails.destination.formatted }}</span>
               </div>
-              <div class="bdr_item">
+              <div
+                class="bdr_item"
+                style="padding: 0.5rem 1.5rem; height: 56px"
+              >
                 <strong>Customer Notes</strong>
-                <textarea placeholder="Note From Customer"></textarea>
+                <textarea
+                  style="height: 100%"
+                  placeholder="Note From Customer"
+                ></textarea>
               </div>
             </div>
           </div>
