--- a/src/app/screens/chatbot-analytics/chatbot-analytics.component.css
+++ b/src/app/screens/chatbot-analytics/chatbot-analytics.component.css
@@ -1,59 +1,57 @@
+.top {
+  display: flex;
+  background-color: rgb(30, 29, 69);
+  padding-left: 1rem;
+  padding-right: 1rem;
+  border-radius: 24px;
+  margin-bottom: 1rem;
+  background: linear-gradient(0deg, #2ebc96 0%, #1a9096 100%);
 
-
-.top{
+  .top-col1 {
+    flex: 1;
+  }
+  .top-col2 {
     display: flex;
-    background-color: rgb(30, 29, 69);
-    padding-left: 1rem;
-    padding-right: 1rem;  
-    border-radius: 24px;
-    margin-bottom: 1rem;
-    background: linear-gradient(0deg, #2EBC96 0%, #1A9096 100%);
-
-    .top-col1{
-        flex: 1;    
-    }
-    .top-col2{
-        display: flex;
-        padding-top: 1rem;
-    }
+    padding-top: 1rem;
+  }
 }
 
-.analytics-bar{
-
+.analytics-bar {
 }
 
-.main-analytics-wrapper{
-    margin: 0;
-    margin-top: 1rem;
-    flex-wrap: 0;
+.main-analytics-wrapper {
+  margin: 0;
+  margin-top: 1rem;
+  flex-wrap: 0;
 }
 
-.first-col, .second-col{
-    display: flex;
-    flex-direction: column;
-    gap: 1.5rem;
+.first-col,
+.second-col {
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
 }
 
-.col-md-3{
-    /* padding: 0; */
+.col-md-3 {
+  /* padding: 0; */
 }
 
-.col-md-6{
-    /* padding: 0; */
+.col-md-6 {
+  /* padding: 0; */
 }
 
 /* chatbot-analytics.component.css */
 .analytics-container {
-    color: white;
-    padding: 20px;
-    border-radius: 8px;
-    /* max-width: 400px; */
-    /* margin: auto; */
-    text-align: start;
+  color: white;
+  padding: 20px;
+  border-radius: 8px;
+  /* max-width: 400px; */
+  /* margin: auto; */
+  text-align: start;
 }
 
 .header {
-    color: #ffffffcc;
+  color: #ffffffcc;
   font-size: 14px;
   margin-bottom: 10px;
 }
@@ -92,15 +90,15 @@ h1 {
 }
 
 .time-button-outline {
-    background: linear-gradient(0deg, #2EBC96 0%, #1A9096 100%);
-    color: #ffffff;
-    box-shadow: 2px 2px 7px #1b9396;
-    border-radius: 6px;
-    border: none;
-    padding: 10px 25px;
-    font-size: 14px;
-    cursor: pointer;
-    transition: 0.3s;
+  background: linear-gradient(0deg, #2ebc96 0%, #1a9096 100%);
+  color: #ffffff;
+  box-shadow: 2px 2px 7px #1b9396;
+  border-radius: 6px;
+  border: none;
+  padding: 10px 25px;
+  font-size: 14px;
+  cursor: pointer;
+  transition: 0.3s;
 }
 
 .time-button-outline:hover {
