--- a/src/app/components/total-bookings/total-bookings.component.css
+++ b/src/app/components/total-bookings/total-bookings.component.css
@@ -5,7 +5,7 @@
   border-radius: 12px;
   box-shadow: 0px 2px 7px 0px #e2e2e2;
   padding: 1rem;
-  font-family: 'Arial', sans-serif;
+  font-family: "Arial", sans-serif;
 }
 
 .header {
@@ -22,7 +22,7 @@
 
 .progress-bar {
   display: flex;
-flex-direction: row;
+  flex-direction: row;
   height: 22px;
   border-radius: 5px;
   overflow: hidden;
@@ -31,14 +31,14 @@ flex-direction: row;
 }
 
 .progress-bookings {
-    display: flex;
-    height: 100%;
+  display: flex;
+  height: 100%;
   background: #4fc3f7;
 }
 
 .progress-cancels {
-display: flex;
-    height: 100%;
+  display: flex;
+  height: 100%;
   background: #f44336;
 }
 
@@ -49,27 +49,26 @@ display: flex;
 }
 
 .details {
-    display: flex;
-    justify-content: space-between;
-    padding: 1rem;
-    border-radius: 20px;
-    box-shadow: 0px 2px 7px 0px #f4f4f4;
+  display: flex;
+  justify-content: space-between;
+  padding: 1rem;
+  border-radius: 20px;
+  box-shadow: 0px 2px 7px 0px #f4f4f4;
 }
 
 .detail-item {
   text-align: center;
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .label {
   display: block;
   font-size: 12px;
-  color: #A3AED0;
-
+  color: #a3aed0;
 }
 
 .value {
@@ -94,12 +93,22 @@ display: flex;
   background: #f44336;
 }
 
-.detail-item-head{
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.detail-item-head {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.detail-item:first-child{
-border-right: 1px solid #f4f4f4;
+.detail-item:first-child {
+  border-right: 1px solid #f4f4f4;
+}
+
+h3 {
+  color: #1b2559;
+  font-family: "DM Sans";
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 32px; /* 160% */
+  letter-spacing: -0.4px;
 }
