--- a/src/app/screens/bookings/bookings.component.css
+++ b/src/app/screens/bookings/bookings.component.css
@@ -231,6 +231,8 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  background: none;
+  width: 25%;
 }
 
 .bdl_top {
@@ -347,6 +349,7 @@
   grid-template-columns: repeat(2, 1fr);
   gap: 1rem;
   flex: 1;
+  background: none;
 }
 
 .bdr_item {
@@ -383,6 +386,7 @@
 .bdr_item:nth-child(9) strong {
   max-width: fit-content;
   margin-right: 2rem;
+  white-space: nowrap;
 }
 
 .bdr_item textarea {
