--- a/src/app/screens/customers/customers.component.css
+++ b/src/app/screens/customers/customers.component.css
@@ -26,6 +26,7 @@
   justify-content: end;
   align-items: center;
   gap: 1rem;
+  width: 100%;
 }
 
 .filter {
@@ -63,6 +64,7 @@
   display: flex;
   align-items: center;
   gap: 1rem;
+  width: 100%;
 }
 
 .hm_right > button {
@@ -92,6 +94,7 @@
   margin-left: 1rem;
   gap: 0.3rem;
   width: 10;
+  width: 100%;
 }
 
 .pagination button {
@@ -137,7 +140,7 @@
 .th_item {
   padding: 1.5rem 0;
   white-space: nowrap;
-  color: #333540;
+  /* color: #333540; */
   font-size: 0.9rem;
   text-align: center;
   font-weight: 600;
@@ -321,6 +324,12 @@
 
 .r_item span {
   font-weight: 400;
+}
+
+.r_item strong {
+  color: #333540;
+  font-size: 0.9rem;
+  font-weight: 600;
 }
 
 .r_item span,
