--- a/src/app/screens/qr-page/qr-page.component.css
+++ b/src/app/screens/qr-page/qr-page.component.css
@@ -274,7 +274,7 @@ h2 {
   /* aspect-ratio: 1482/332; */
   /* height: fit-content; */
   overflow: hidden;
-  aspect-ratio: 1482/272;
+  /* aspect-ratio: 1482/272; */
   position: relative;
   margin-top: 20px;
   border-radius: 10px;
