--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,8 +1,8 @@
 <header class="navbar">
   <div class="left">
-    <div class="kanban" style="text-transform: capitalize">
+    <!-- <div class="kanban" style="text-transform: capitalize">
       {{ currentUrl }}
-    </div>
+    </div> -->
     <h1 style="text-transform: capitalize">{{ title }}</h1>
   </div>
   <!-- <div class="middle">
