--- a/src/app/screens/app-settings/app-settings.component.css
+++ b/src/app/screens/app-settings/app-settings.component.css
@@ -316,3 +316,15 @@
   color: #737791;
   text-align: left;
 }
+
+.tooltip-l {
+  display: none;
+}
+
+.toggle:hover .tooltip-l {
+  display: flex;
+}
+
+/* .toggle:hover .tooltip {
+  display: flex;
+} */
