--- a/src/app/screens/customers/customers.component.html
+++ b/src/app/screens/customers/customers.component.html
@@ -192,7 +192,7 @@
                   />
                 </svg>
               </button>
-              <button>
+              <!-- <button>
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
                   width="15"
@@ -208,7 +208,7 @@
                     stroke-linejoin="round"
                   />
                 </svg>
-              </button>
+              </button> -->
             </div>
           </div>
           <div class="th_item">
