--- a/src/app/screens/home/home.component.css
+++ b/src/app/screens/home/home.component.css
@@ -45,6 +45,38 @@ option {
   padding: 15px !important;
 }
 
+.head-btns {
+  display: flex;
+  gap: 10px;
+  position: absolute;
+  top: 30.3px;
+  width: -moz-fit-content;
+  width: fit-content;
+  left: 441px;
+  z-index: 99999;
+}
+.head-btns button {
+  border-radius: 8px;
+  border: 1px solid #e4e4e7;
+  box-shadow: 0px 10px 30px 0px rgba(46, 188, 150, 0.1);
+  display: inline-flex;
+  padding: 10px 15px;
+  justify-content: center;
+  align-items: center;
+  gap: 15px;
+  background: white;
+  color: black;
+}
+
+.head-btns button:hover {
+  color: white;
+  background: linear-gradient(180deg, #27a080 0%, #27d1a5 100%);
+}
+
+.head-btns button.active {
+  color: white;
+  background: linear-gradient(180deg, #27a080 0%, #27d1a5 100%);
+}
 .container-own {
   display: flex;
   gap: 10px;
@@ -457,7 +489,8 @@ h6 {
 }
 
 .a_top_2 span {
-  font-weight: 500;
+  font-weight: 600;
+  font-size: 15px;
 }
 
 .a_top_2 div p {
