--- a/src/app/screens/home/home.component.html
+++ b/src/app/screens/home/home.component.html
@@ -1,4 +1,8 @@
 <div class="container-own">
+  <div class="head-btns">
+    <button>Today</button>
+    <button>All Time</button>
+  </div>
   <div class="top" style="position: relative">
     <div class="reports" style="position: relative">
       <!-- <p>{{ percentChange }}%</p> -->
@@ -134,7 +138,18 @@
         </div>
         <div *ngIf="isBannerVisible" class="a_top_2">
           <div>
-            <img src="../../../assets/info-icon.png" />
+            <svg
+              width="20"
+              height="21"
+              viewBox="0 0 20 21"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                d="M9 5.5H11V7.5H9V5.5ZM10 15.5C10.55 15.5 11 15.05 11 14.5V10.5C11 9.95 10.55 9.5 10 9.5C9.45 9.5 9 9.95 9 10.5V14.5C9 15.05 9.45 15.5 10 15.5ZM10 0.5C4.48 0.5 0 4.98 0 10.5C0 16.02 4.48 20.5 10 20.5C15.52 20.5 20 16.02 20 10.5C20 4.98 15.52 0.5 10 0.5ZM10 18.5C5.59 18.5 2 14.91 2 10.5C2 6.09 5.59 2.5 10 2.5C14.41 2.5 18 6.09 18 10.5C18 14.91 14.41 18.5 10 18.5Z"
+                fill="#181818"
+              />
+            </svg>
             <p style="font-size: 14px">
               <span style="color: black">Important Note:</span>
               After seven days, all sent message data will be permanently
