--- a/src/app/screens/messages/messages.component.html
+++ b/src/app/screens/messages/messages.component.html
@@ -123,13 +123,25 @@
           align-items: center;
           gap: 5px;
           height: fit-content;
-          font-size: 14px;
+          font-size: 15px;
 
-          font-weight: 500;
+          font-weight: 600;
           color: black;
           font-family: 'DM Sans';
         "
-        ><img src="../../../assets/info-icon.png" /> Important Note:</span
+        ><svg
+          width="20"
+          height="21"
+          viewBox="0 0 20 21"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <path
+            d="M9 5.5H11V7.5H9V5.5ZM10 15.5C10.55 15.5 11 15.05 11 14.5V10.5C11 9.95 10.55 9.5 10 9.5C9.45 9.5 9 9.95 9 10.5V14.5C9 15.05 9.45 15.5 10 15.5ZM10 0.5C4.48 0.5 0 4.98 0 10.5C0 16.02 4.48 20.5 10 20.5C15.52 20.5 20 16.02 20 10.5C20 4.98 15.52 0.5 10 0.5ZM10 18.5C5.59 18.5 2 14.91 2 10.5C2 6.09 5.59 2.5 10 2.5C14.41 2.5 18 6.09 18 10.5C18 14.91 14.41 18.5 10 18.5Z"
+            fill="#181818"
+          />
+        </svg>
+        Important Note:</span
       >
       <p style="font-size: 14px; color: black">
         For all message types there are three versions that are used for
@@ -354,7 +366,7 @@
     >
       <span
         style="
-          font-weight: 500;
+          font-weight: 600;
           color: black;
           white-space: nowrap;
           width: fit-content;
@@ -363,9 +375,21 @@
           align-items: center;
           height: fit-content;
           font-family: 'DM Sans';
-          font-size: 14px;
+          font-size: 15px;
         "
-        ><img src="../../../assets/info-icon.png" /> Important Note:</span
+        ><svg
+          width="20"
+          height="21"
+          viewBox="0 0 20 21"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <path
+            d="M9 5.5H11V7.5H9V5.5ZM10 15.5C10.55 15.5 11 15.05 11 14.5V10.5C11 9.95 10.55 9.5 10 9.5C9.45 9.5 9 9.95 9 10.5V14.5C9 15.05 9.45 15.5 10 15.5ZM10 0.5C4.48 0.5 0 4.98 0 10.5C0 16.02 4.48 20.5 10 20.5C15.52 20.5 20 16.02 20 10.5C20 4.98 15.52 0.5 10 0.5ZM10 18.5C5.59 18.5 2 14.91 2 10.5C2 6.09 5.59 2.5 10 2.5C14.41 2.5 18 6.09 18 10.5C18 14.91 14.41 18.5 10 18.5Z"
+            fill="#181818"
+          />
+        </svg>
+        Important Note:</span
       >
       <p style="font-size: 14px; color: black">
         Sending too many URLs can increase the risk of a WhatsApp account ban
@@ -393,16 +417,28 @@
       >
         <span
           style="
-            font-weight: 500;
+            font-weight: 600;
             color: black;
             display: inline-flex;
             align-items: center;
             gap: 5px;
-            font-size: 14px;
+            font-size: 15px;
             font-family: 'DM Sans';
             white-space: nowrap;
           "
-          ><img src="../../../assets/info-icon.png" /> Important Note:</span
+          ><svg
+            width="20"
+            height="21"
+            viewBox="0 0 20 21"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              d="M9 5.5H11V7.5H9V5.5ZM10 15.5C10.55 15.5 11 15.05 11 14.5V10.5C11 9.95 10.55 9.5 10 9.5C9.45 9.5 9 9.95 9 10.5V14.5C9 15.05 9.45 15.5 10 15.5ZM10 0.5C4.48 0.5 0 4.98 0 10.5C0 16.02 4.48 20.5 10 20.5C15.52 20.5 20 16.02 20 10.5C20 4.98 15.52 0.5 10 0.5ZM10 18.5C5.59 18.5 2 14.91 2 10.5C2 6.09 5.59 2.5 10 2.5C14.41 2.5 18 6.09 18 10.5C18 14.91 14.41 18.5 10 18.5Z"
+              fill="#181818"
+            />
+          </svg>
+          Important Note:</span
         >
         Keep your SMS text within 160 characters to ensure it is sent as a
         single message. Messages over 160 characters will be counted as two or
