--- a/src/app/screens/qr-page/qr-page.component.html
+++ b/src/app/screens/qr-page/qr-page.component.html
@@ -3575,7 +3575,10 @@
       </button>
     </div> -->
 
-    <div class="main" *ngIf="showUniversalQrGenerator">
+    <div
+      class="main"
+      *ngIf="showUniversalQrGenerator || filteredQrCodes.length == 0"
+    >
       <div class="main-left">
         <div>
           <p style="width: 100%; display: flex; justify-content: space-between">
@@ -3814,7 +3817,10 @@
       </button>
     </div> -->
     <div style="width: 100%">
-      <div *ngIf="showUniversalQrGenerator" class="main">
+      <div
+        *ngIf="showUniversalQrGenerator || filteredQrCodes.length == 0"
+        class="main"
+      >
         <div class="main-left">
           <div>
             <p
@@ -4085,7 +4091,7 @@
   </div>
 </main>
 
-<main>
+<main *ngIf="filteredQrCodes.length > 0">
   <div
     style="display: flex; justify-content: space-between; align-items: center"
   >
@@ -4152,7 +4158,7 @@
           background: linear-gradient(270deg, #2ebc96 0%, #1a9096 100%);
           color: #fff;
           font-family: Nunito;
-          font-size: 18px;
+          font-size: 14px;
           font-style: normal;
           font-weight: 600;
           line-height: normal;
@@ -4165,8 +4171,8 @@
         "
       >
         <svg
-          width="30"
-          height="30"
+          width="15"
+          height="15"
           viewBox="0 0 30 30"
           fill="none"
           xmlns="http://www.w3.org/2000/svg"
@@ -4202,7 +4208,7 @@
           background: linear-gradient(270deg, #2ebc96 0%, #1a9096 100%);
           color: #fff;
           font-family: Nunito;
-          font-size: 18px;
+          font-size: 14px;
           font-style: normal;
           font-weight: 600;
           line-height: normal;
@@ -4215,8 +4221,8 @@
         "
       >
         <svg
-          width="20"
-          height="20"
+          width="15"
+          height="15"
           viewBox="0 0 20 20"
           fill="none"
           xmlns="http://www.w3.org/2000/svg"
